--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,59 @@ body {
     padding: 0;
     box-sizing: content-box;
 }
+.calculator-container {
+    display: flex;
+    flex-direction: column;
+    height: 60vh;
+    width: 20vw;
+    background-color: #ADD8E6;
+    border: 1px solid #121212;
+    border-radius: 20px;
+    align-items: center;
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 10px;
+}
+.display {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 90%;
+    height: 10%;
+    padding: 10px;
+}
+.display > input {
+    width: 80%;
+    height: 70%;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 1.2rem;
+}
+.numbers {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 80%;
+    width: 80%;
+    gap: 10px;
+    flex: 1;
+}
+.numbers-btn {
+    width: 50px;
+    height: 50px;
+    background-color: azure;
+    border: 1px solid black;
+    border-radius: 5px;
+    font-size: larger;
+}
+.operators-btn {
+    width: 50px;
+    height: 50px;
+    background-color: blue;
+    border: 1px solid black;
+    border-radius: 5px;
+    font-size: larger;
+}
